kubernetes/smart-home/homey/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homey
  namespace: smart-home
  labels:
    app.kubernetes.io/name: homey
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: homey
  ports:
    - name: http
      port: 4859
      targetPort: http
      protocol: TCP
    - name: https
      port: 4860
      targetPort: https
      protocol: TCP
    - name: bridge-v1
      port: 4861
      targetPort: bridge-v1
      protocol: TCP
    - name: bridge-v2
      port: 4862
      targetPort: bridge-v2
      protocol: TCP
