kubernetes/smart-home/homey/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homey
  namespace: smart-home
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`homey.home.mcnees.me`)
      kind: Rule
      services:
        - name: homey
          port: 4859
  tls:
    secretName: homey-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homey-public
  namespace: smart-home
spec:
  entryPoints:
    - websecure-external
  routes:
    - match: Host(`homey.mcnees.me`)
      kind: Rule
      middlewares:
        - name: public-chain
          namespace: infrastructure
      services:
        - name: homey
          port: 4859
  tls:
    secretName: homey-public-tls
